# BMSTU

./: README.md
Compilers/lab4/: input.txt
Compilers/lab5/: input.txt
Compilers/lab6/: input.txt  lexer.l  script.sh
Compilers/lab9/: lab9.l  lab9.y  lexer.h  script.sh  test.java
Computer Graphics/GraphicsLab1/: Main.java  Model.java  Window.java
Computer Graphics/GraphicsLab2-3/: Model.java  Window.java
Computer Graphics/GraphicsLab4/: Main.java  Model.java  Window.java
Computer Graphics/GraphicsLab5/: Model.java  Window.java
Computer Graphics/GraphicsLab6/: Animation.java  Main.java  Model.java  Texture.java  Window.java
Computer Graphics/GraphicsLab7/: Animation.java  Camera.java  Main.java  Model.java  Optimizations.xlsx  Window.java
Computer Graphics/GraphicsLab8/: Animation.java  Camera.java  Cylinder.java  Quad.java  Shader.java  Texture.java  Window.java
Databases/lab10/: lab10.1.sql  lab10.2.sql  lab10.sql
Databases/lab11/: lab11.sql
Databases/lab12/: Program.cs  lab12.sql
Optimal code generation/: lab1.c
Theory of formal languages/parser/: Application.cpp  CMakeLists.txt  main.cpp
Theory of formal languages/parser/core/: Lexer.cpp  Parser.cpp  StateStack.cpp  Tokenizer.cpp
Theory of formal languages/parser/data/: Grammar.cpp  Grammar.h  Token.cpp  Token.h
Theory of formal languages/parser/io/: FileReadUtils.cpp  FileReadUtils.h
Theory of formal languages/parser/modules/: Application.h  Lexer.h  Parser.h  StateStack.h  Tokenizer.h
Theory of formal languages/parser/test/: grammar.txt  grammar1.txt  test.txt  test1.txt
(+293 files in other folders)
